SERVER-43971 Fix null pointer in mqlrun

GitOrigin-RevId: 336fae2dff0c0d6164b11dc4772d72ee08114c0c